# CoUpJava

./: .gitignore  LICENSE  README-zenodo.md  README.md  prepare-env.sh  pyproject.toml
_work/repos/: combined.json  combined_final.json  combined_no_fork.json  repos_to_clone_java_1.10.txt  repos_to_clone_java_1.5.txt  repos_to_clone_java_1.6.txt  repos_to_clone_java_1.7.txt  repos_to_clone_java_1.8.txt  repos_to_clone_java_1.9.txt  repos_to_clone_java_10.txt  repos_to_clone_java_11.txt  repos_to_clone_java_12.txt  repos_to_clone_java_13.txt  repos_to_clone_java_14.txt  repos_to_clone_java_15.txt  repos_to_clone_java_16.txt  repos_to_clone_java_17.txt  repos_to_clone_java_18.txt  repos_to_clone_java_19.txt  repos_to_clone_java_20.txt  repos_to_clone_java_21.txt  repos_to_clone_java_22.txt  repos_to_clone_java_23.txt  repos_to_clone_java_5.txt  repos_to_clone_java_6.txt  repos_to_clone_java_7.txt  repos_to_clone_java_9.txt
src/codeupgrade/: __about__.py  build_dataset_javaver.py  build_dataset_refactoringminer.py  get_refactoring.py  search_github.py  utils.py
